--- a/main.html
+++ b/main.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html>
    <head>
+   	<meta charset="utf-8">
    	<title>SF vs LA</title>
-   <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+   <script src="http://d3js.org/d3.v3.min.js"></script>
    <script src="http://d3js.org/topojson.v1.min.js"></script>
-
+   <link rel="stylesheet" type="text/css" href="map.css"> 
    </head>
    <body>
-       <h1><center>San Francisco vs Los Angeles</center></h1>
-       <h2><center>CMPS 165: Data Programming for Visualization</center></h2>
-       <h2><center>Winter 2015</center></h2>
+   	<h1>San Francisco vs Los Angeles</h1>
+   	<div id="container"></div>
    <script src="maps.js"></script>
    <h4>Created by Kyle, Michael, Ryan, Dylan</h4>
       
@@ -25,9 +25,5 @@
     </ul>
       
     <h4> Sources: </h4>
-    <ul>
-    	<li>http://maps.latimes.com/about/</li>
-        <li>http://bost.ocks.org/mike/map/</li>
-    </ul>
    </body>
 </html>
