--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
    <script src="maps.js"></script>
    <h4>Created by Kyle Kiminki, Michael Stirchak, Ryan Brounley, Dylan Woodbury</h4>
       
-    <h4>Description: San Francisco vs Los Angeles, a comparative analysis of California's two largest urban centers. </h4><br>
+    <h4>Description: San Francisco vs. Los Angeles, a comparative analysis of California's two largest urban centers. </h4><br>
        
     <h4>Created for CMPS 165: Data Programming for Visualization, Winter 2015</h4>
     <h4>Instuctor: Suresh K Lodha </h4><br>
@@ -38,6 +38,10 @@
         <li>http://bl.ocks.org/mbostock/2206590 - Mike Bostock's D3 example for click-to-zoom functionality.</li>
         <li>http://www.javascript-coder.com/button/javascript-button-p1.phtml - An online tutorial for javascript buttons.</li>
         <li>http://chimera.labs.oreilly.com/books/1230000000345/ch12.html - Scott Murray's chapter on geomapping.</li>
+        <li>http://bl.ocks.org/tjdecke/5558084 - idea for legend code </li>
+        <li>http://vallandingham.me/shapefile_to_geojson.html - tutorial on creating geoJSONs</li>
+        <li>http://boundaries.latimes.com/sets/ - LA Census Tracts GeoJSON</li>
+        <li>http://factfinder.census.gov/faces/nav/jsf/pages/searchresults.xhtml?refresh=t#none - SF and LA data source</li>
     </ul>
    </body>
 </html>
