--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <h4>Files:</h4>
     
     <ul>
-      <li>main.html</li>
+      <li>index.html</li>
       <li>maps.js</li>
       <li>map.css</li>
       <li>LACountryTracts.geojson</li>
