--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
        <h1><center>San Francisco vs. Los Angeles</center></h1>
 
    <script src="maps.js"></script>
-   <h4>Created by Kyle Kiminki, Michael Stirchak, Ryan Brounley, Dylan Woodbury</h4>
+   <h4>Created by Kyler Kiminki, Michael Stirchak, Ryan Brounley, Dylan Woodbury</h4>
       
     <h4>Description: San Francisco vs. Los Angeles, a comparative analysis of California's two largest urban centers. </h4><br>
        
